<resources>
    <string name="app_name">Simply RSS</string>
    <string name="settings">Settings</string>
    <string name="rss_feed_address">RSS feed URL-address</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="url_is_not_specified">URL is not specified</string>
    <string name="no_data">No data</string>
    <string name="no_connection">No network connection</string>
    <string name="feed">Feed</string>
    <string name="update_interval">Update interval</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_rss_feed">Add RSS feed</string>
    <string name="info_deleted"><![CDATA[Item <b>%s</b> has been deleted]]></string>
    <string name="undo">Undo</string>
    <string name="no_feed_by_url_header">No RSS feed by URL</string>
    <string name="no_feed_by_url_text">There are no RSS feed available by the specified URL-address</string>
    <string name="close">Close</string>
    <string name="no_network_to_get_feed_header">No network connection</string>
    <string name="no_network_to_get_feed_text">Network connection is required to add new RSS feed</string>

    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
</resources>
