<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/add_rss_feed"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rss_feed_address"
            android:inputType="textUri"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end">

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/highlight_rounded"
            android:enabled="false"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/highlight_rounded"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>